Fix ccollapsables

--- a/src/stylesheets/pages/_main.scss
+++ b/src/stylesheets/pages/_main.scss
@@ -471,7 +471,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom: 1px solid $color-border;
   }
 }
 .customize-form__container {
